<resources>
    <string name="app_name">PrescriptionApp</string>
    <string name="action_settings">Settings</string>
    <string name="feedbackname">your name</string>
    <string name="PrescriptionViewTitle">Fill Your Prescription Details</string>
    <string name="PrescriptionName">Prescription Name</string>
    <string name="DoctorName">Doctor Name</string>
    <string name="DoctorNumber">Doctor Number</string>
    <string name="PrescriptionTimeDose">Insert Time and Dose</string>
    <string name="Time">8:00</string>
    <string name="Dose">1 pill</string>
    <string name="Takings">How many Takings?</string>
    <string name="name">Your Name </string>
    <string name="username">Choose a username </string>
    <string name="passwordSignup">Choose a password </string>
    <string name="createAccount">Create Account </string>
    <string name="alreadyMember">Already a member? Login &#9829;</string>
    <string name="NoAccount">No Account ? Create One Now &#x1F60A;  </string>
    <string name="login">Login </string>
    <string name="passwordSignin">password </string>
    <string name="cancelMark">&#x2715; </string>
    <string name="search">search prescriptions </string>
    <string name="refreshLog">Refresh Prescription Log </string>

    <string name="upcomingPrescriptions">Upcoming Prescriptions &#x1F60A; </string>
    <string name="title_activity_maps">Map</string>

    <string name="DocViewTitle">My Doctors</string>



</resources>
